# Argus

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  FREE_USE.md  PLATFORM_OVERHAUL.md
src/argus_osint/: __init__.py  app_services.py  bundles.py  campaigns.py  civic.py  collectors.py  config.py  correlation.py  databrokers.py  db.py  evidence.py  main.py  operations.py  plugins.py  reports.py  repository.py  security.py  ui.py  universal.py  web.py  workspace.py
src/argus_osint/web_static/: app.js  index.html  styles.css
tests/: test_core.py  test_databrokers.py  test_new_collectors.py  test_platform_services.py  test_security_workflows.py  test_ui.py  test_web_app.py
